Start of front-end
...the page is really basic rn

--- a/wec-spring-2020/src/App.css
+++ b/wec-spring-2020/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+/** @format */
+
+.main {
+	text-align: center;
+	padding: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title-header {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	padding-bottom: 0px;
+	margin: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	justify-content: center;
+  align-items: left;
 }
 
-.App-link {
-  color: #61dafb;
+.title-icon {
+  width: 60px;
+  height: 60px;
+	padding: 0px;
+	padding-right: 2px;
+  display:block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-bar{
+  width: 500px;
 }
