--- a/wec-spring-2020/src/index.css
+++ b/wec-spring-2020/src/index.css
@@ -1,13 +1,25 @@
+/** @format */
+
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Varela+Round&display=swap"rel="stylesheet");
+@import url("../node_modules/normalize.css/normalize.css");
+@import url("../node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css");
+@import url("../node_modules/@blueprintjs/core/lib/css/blueprint.css");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	background-color: #94f6ff;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+	font-family: "Oxygen", sans-serif;
+	font-size: 20px;
+	padding: 0px;
+}
+
+h1 {
+	font-family: "Varela Round", sans-serif;
+	font-size: 60px;
+	padding: 0px;
 }
