--- a/wec-spring-2020/src/App.css
+++ b/wec-spring-2020/src/App.css
@@ -14,22 +14,28 @@
 	margin: 0px;
 }
 
-.search-body{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.search-body,
+.results-body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	justify-content: center;
-  align-items: left;
+	align-items: left;
 }
 
 .title-icon {
-  width: 60px;
-  height: 60px;
+	width: 60px;
+	height: 60px;
 	padding: 0px;
 	padding-right: 2px;
-  display:block;
+	display: block;
 }
 
-.search-bar{
-  width: 500px;
+.search-bar {
+	width: 500px;
+}
+
+.results-card {
+	width: 500px;
+	font-family: "Oxygen", sans-serif;
 }
